tests/error/array_invalid.gw
// [contains] must be of type 'int'
 int i[4];
i[NULL];
